--- a/src/patternfly/components/CalendarMonth/calendar-month.scss
+++ b/src/patternfly/components/CalendarMonth/calendar-month.scss
@@ -41,6 +41,9 @@
   --#{$calendar-month}__dates-cell--before--InsetInlineEnd: 0;
   --#{$calendar-month}__dates-cell--before--InsetBlockEnd: var(--#{$calendar-month}__dates-cell--PaddingBlockEnd);
   --#{$calendar-month}__dates-cell--before--InsetInlineStart: 0;
+  --#{$calendar-month}__dates-cell--after--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$calendar-month}__dates-cell--after--BorderBlockStartWidth: 0;
+  --#{$calendar-month}__dates-cell--after--BorderBlockEndWidth: 0;
   --#{$calendar-month}__dates-cell--m-in-range--before--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$calendar-month}__dates-cell--m-in-range--m-start-range--before--InsetInlineStart: 50%;
   --#{$calendar-month}__dates-cell--m-in-range--m-end-range--before--InsetInlineEnd: 50%;
@@ -48,6 +51,8 @@
   --#{$calendar-month}__dates-cell--m-in-range__date--hover--BorderWidth: var(--pf-t--global--border--width--regular);
   --#{$calendar-month}__dates-cell--m-in-range__date--hover--BorderColor: var(--pf-t--global--border--color--hover);
   --#{$calendar-month}__dates-cell--m-in-range__date--focus--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
+  --#{$calendar-month}__dates-cell--m-in-range--after--BorderBlockStartWidth: var(--pf-t--global--border--width--high-contrast--regular);
+  --#{$calendar-month}__dates-cell--m-in-range--after--BorderBlockEndWidth: var(--pf-t--global--border--width--high-contrast--regular);
   --#{$calendar-month}__dates-cell--m-adjacent-month__date--Color: var(--pf-t--global--text--color--subtle);
 
   // date button
@@ -68,6 +73,8 @@
   --#{$calendar-month}__date--focus--BackgroundColor: var(--pf-t--global--color--brand--default);
   --#{$calendar-month}__date--focus--after--BorderColor: var(--pf-t--global--border--color--hover);
   --#{$calendar-month}__date--after--focus--OutlineOffset: -2px;
+  --#{$calendar-month}__dates-cell--m-current__date--after--BorderWidth: var(--pf-t--global--border--width--high-contrast--regular);
+  --#{$calendar-month}__dates-cell--m-current__date--after--BorderColor: var(--pf-t--global--border--color--high-contrast);
 }
 
 .#{$calendar-month} {
@@ -136,21 +143,34 @@
   padding-inline-end: var(--#{$calendar-month}__dates-cell--PaddingInlineEnd);
   text-align: center;
 
-  &::before {
+  &::before,
+  &::after {
     position: absolute;
     inset-block-start: var(--#{$calendar-month}__dates-cell--before--InsetBlockStart);
     inset-block-end: var(--#{$calendar-month}__dates-cell--before--InsetBlockEnd);
     inset-inline-start: var(--#{$calendar-month}__dates-cell--before--InsetInlineStart);
     inset-inline-end: var(--#{$calendar-month}__dates-cell--before--InsetInlineEnd);
     content: "";
+  }
+
+  &::before {
     background-color: var(--#{$calendar-month}__dates-cell--before--BackgroundColor);
+  }
+
+  &::after {
+    border: solid var(--#{$calendar-month}__dates-cell--after--BorderColor);
+    border-width: var(--#{$calendar-month}__dates-cell--after--BorderBlockStartWidth) 0 var(--#{$calendar-month}__dates-cell--after--BorderBlockEndWidth);
   }
 
   &.pf-m-current {
     --#{$calendar-month}__date--BackgroundColor: var(--#{$calendar-month}__dates-cell--m-current__date--BackgroundColor);
+    --#{$calendar-month}__date--after--BorderWidth: var(--#{$calendar-month}__dates-cell--m-current__date--after--BorderWidth);
+    --#{$calendar-month}__date--after--BorderColor: var(--#{$calendar-month}__dates-cell--m-current__date--after--BorderColor);
   }
 
   &.pf-m-in-range {
+    --#{$calendar-month}__dates-cell--after--BorderBlockStartWidth: var(--#{$calendar-month}__dates-cell--m-in-range--after--BorderBlockStartWidth);
+    --#{$calendar-month}__dates-cell--after--BorderBlockEndWidth: var(--#{$calendar-month}__dates-cell--m-in-range--after--BorderBlockEndWidth);
     --#{$calendar-month}__dates-cell--before--BackgroundColor: var(--#{$calendar-month}__dates-cell--m-in-range--before--BackgroundColor);
     --#{$calendar-month}__date--hover--BackgroundColor: var(--#{$calendar-month}__dates-cell--m-in-range__date--hover--BackgroundColor);
     --#{$calendar-month}__date--hover--BorderWidth: var(--#{$calendar-month}__dates-cell--m-in-range__date--hover--BorderWidth);
@@ -186,6 +206,8 @@
 
   &.pf-m-disabled {
     --#{$calendar-month}__dates-cell--before--BackgroundColor: transparent;
+    --#{$calendar-month}__dates-cell--after--BorderBlockStartWidth: 0;
+    --#{$calendar-month}__dates-cell--after--BorderBlockEndWidth: 0;
     --#{$calendar-month}__date--BackgroundColor: transparent;
   }
 }
